<resources>
    <string name="app_name">My Application</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_bound_service">BoundService</string>
    <string name="title_activity_list_view_sample">ListViewSample</string>
    <string name="title_activity_sqlite_sample">SQLiteSample</string>

    <string name="title_activity_splash">Splash</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">Welcome \n My World~</string>
    <string name="display_password_character">비밀번호 표시</string>
    <string name="title_activity_camera">CameraActivity</string>
    <string name="title_activity_SurfaceView">화면제어</string>
    <string name="title_activity_SoundStuff">음악을 들어볼까?</string>
    <string name="title_activity_sliding">SlidingActivity</string>
    <string name="title_activity_tabs">TabsActivity</string>
    <string name="title_activity_simple_browser">SimpleBrowserActivity</string>
    <string name="Go">가자</string>
    <string name="hint_editText_url">주소를 입력하세요.</string>
    <string name="title_button_goback">뒤로</string>
    <string name="title_button_forward">앞으로</string>
    <string name="title_button_refresh">새로고침</string>
    <string name="title_button_history">이력조회</string>
    <string name="title_activity_flipper">FlipperActivity</string>
    <string name="title_activity_shared_pref">SharedPrefActivity</string>
    <string name="title_activity_InternalData">파일로저장하기</string>
    <string name="title_activity_sensor">SensorActivity</string>
    <string name="title_activity_http">HttpActivity</string>
    <string name="title_activity_weather">WeatherActivity</string>
    <string name="도시명">titile_cicy</string>
    <string name="title_weather_city">도시명</string>
    <string name="title_weather_state">시/도 명</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="title_activity_GLExample">그림을 그려보자</string>
</resources>
