<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.kangsoo.myapplication.SimpleBrowserActivity">

    <LinearLayout
        android:layout_weight="100"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:layout_weight="80"
            android:id="@+id/etUrl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_editText_url" />

        <Button
            android:layout_weight="20"
            android:id="@+id/btnGo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/Go" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnGoBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_button_goback" />

        <Button
            android:id="@+id/btnGoForward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_button_forward" />

        <Button
            android:id="@+id/btnGoRefresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_button_refresh" />

        <Button
            android:id="@+id/btnGoHistory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_button_history" />

    </LinearLayout>

    <WebView
        android:id="@+id/wbBrowser"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

    </WebView>
</LinearLayout>
